# realthing

./: .gitignore  Anchor.toml  CNAME  README.md  WEB.md  admin.css  admin.html  admin.js  index.html  script.js  style.css  vercel.json
.github/workflows/: deploy-pages.yml
app/: App.tsx  app.config.js  app.json  eas.json  metro.config.js  package-lock.json  package.json
app/android/: .gitignore  gradle.properties  settings.gradle
app/ios/: VerityHardwareSigner.swift  VerityHardwareSignerBridge.m  VerityIosWifiInfo.m  VerityIosWifiInfo.swift
app/src/: AppErrorBoundary.tsx  polyfills.ts
chain/: README.md  docker-compose.yml
chain/config/: chain-config.json  genesis-accounts.json  nginx.conf
chain/scripts/: create-genesis.sh  deploy-programs.sh  setup-keys.sh  start-local-devnet.sh  start-validator.sh
programs/bridge/: Cargo.toml
programs/bridge/src/: lib.rs
programs/photo-hash/: Cargo.toml
programs/photo-hash/src/: lib.rs
programs/pht-token/: Cargo.toml
programs/pht-token/src/: lib.rs
server/: .env.example  README.md  package-lock.json  package.json  vercel.json
server/ai/: Dockerfile  README.md  app.py  requirements.txt
server/api/: index.js
server/data/: .gitignore  README.md
server/deploy/: Caddyfile.api.example  HTTPS.md
server/scripts/: generate-android-icons.mjs  import-opencellid.mjs
server/sql/: schema.sql
server/src/: app.js  batchActivity.js  cellGpsAnalysis.js  db.js  index.js  mediaHash.js  merkle.js  opencellid.js  phash.js  s3.js  (+2 more)
tests/: photo-hash.ts
verify-web/: README.md  admin.html  index.html  vercel.json
(+41 files in other folders)
