[package]
name = "pht-bridge"
version = "0.1.0"
description = "Bridge program for SOL <-> VRT cross-chain transfers"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pht_bridge"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
