[package]
name = "photo-hash"
version = "0.1.0"
description = "Solana program for storing photo perceptual hashes on-chain"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "photo_hash"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
