[package]
name = "verity-token"
version = "0.1.0"
description = "VRT (Verity Token) - Native governance and utility token for Verity Chain"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "verity_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
